// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`button mode="default" should match snapshot 1`] = `
.c2 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  opacity: 1;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c1 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  max-width: 100%;
  position: relative;
  overflow: hidden;
  min-width: 14px;
}

.c0 {
  border-radius: 3px;
  border-style: solid;
  border-width: 1px;
  box-sizing: border-box;
  cursor: pointer;
  font-size: 14px;
  line-height: 18px;
  outline: none;
  padding: 10px 20px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color 100ms ease-out,border-color 100ms ease-out,box-shadow 100ms ease-out;
  transition: background-color 100ms ease-out,border-color 100ms ease-out,box-shadow 100ms ease-out;
  white-space: nowrap;
  background-color: #f2f2f4;
  border-color: #f2f2f4;
  color: #56565a;
}

.c0:hover {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #dfdfe3;
  border-color: #dfdfe3;
}

.c0:active {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #d1d1d6;
  border-color: #d1d1d6;
  color: #56565a;
}

.c0:disabled {
  cursor: not-allowed;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #f9f9fc;
  border-color: #f9f9fc;
  color: #8b8b90;
}

.c0:focus {
  box-shadow: #d1d1d6 0 0 0 2px;
}

<Button
  disabled={false}
  fontColor=""
  isLoading={false}
  mode="default"
  onClick={[Function]}
  type="button"
>
  <StyledButton
    disabled={false}
    fontColor=""
    mode="default"
    onClick={[Function]}
    type="button"
  >
    <StyledComponent
      disabled={false}
      fontColor=""
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "StyledButton-sc-1etazn9-0",
            "isStatic": false,
            "lastClassName": "PJlNW",
            "rules": Array [
              "border-radius:3px;border-style:solid;border-width:1px;box-sizing:border-box;cursor:pointer;font-size:14px;line-height:18px;outline:none;padding:10px 20px;text-align:center;text-decoration:none;transition:background-color ",
              "100ms",
              " ease-out,border-color ",
              "100ms",
              " ease-out,box-shadow ",
              "100ms",
              " ease-out;width:",
              [Function],
              ";white-space:nowrap;",
              [Function],
              ";",
              [Function],
              ";:hover{cursor:pointer;text-decoration:none;",
              [Function],
              "};:active{text-decoration:none;",
              [Function],
              "};:disabled{cursor:not-allowed;text-decoration:none;",
              [Function],
              "};:focus{",
              [Function],
              "}",
            ],
          },
          "displayName": "StyledButton",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "StyledButton-sc-1etazn9-0",
          "target": "button",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      mode="default"
      onClick={[Function]}
      type="button"
    >
      <button
        className="c0"
        disabled={false}
        mode="default"
        onClick={[Function]}
        type="button"
      >
        <ContentWrapper>
          <StyledComponent
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "ContentWrapper-sc-36hfub-0",
                  "isStatic": false,
                  "lastClassName": "c1",
                  "rules": Array [
                    "align-self:center;display:inline-flex;flex-wrap:nowrap;max-width:100%;position:relative;overflow:hidden;min-width:14px;",
                  ],
                },
                "displayName": "ContentWrapper",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "ContentWrapper-sc-36hfub-0",
                "target": "span",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <span
              className="c1"
            >
              <Content
                isLoading={false}
              >
                <StyledComponent
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "Content-sc-18psqsj-0",
                        "isStatic": false,
                        "lastClassName": "c2",
                        "rules": Array [
                          "flex:1 1 auto;opacity:",
                          [Function],
                          ";overflow:hidden;text-overflow:ellipsis;white-space:nowrap;",
                        ],
                      },
                      "displayName": "Content",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "Content-sc-18psqsj-0",
                      "target": "span",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                  isLoading={false}
                >
                  <span
                    className="c2"
                  >
                    DEFAULT_BUTTON
                  </span>
                </StyledComponent>
              </Content>
            </span>
          </StyledComponent>
        </ContentWrapper>
      </button>
    </StyledComponent>
  </StyledButton>
</Button>
`;

exports[`button mode="default" should match snapshot 2`] = `
.c2 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  opacity: 1;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c1 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  max-width: 100%;
  position: relative;
  overflow: hidden;
  min-width: 14px;
}

.c0 {
  border-radius: 3px;
  border-style: solid;
  border-width: 1px;
  box-sizing: border-box;
  cursor: pointer;
  font-size: 14px;
  line-height: 18px;
  outline: none;
  padding: 10px 20px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color 100ms ease-out,border-color 100ms ease-out,box-shadow 100ms ease-out;
  transition: background-color 100ms ease-out,border-color 100ms ease-out,box-shadow 100ms ease-out;
  white-space: nowrap;
  background-color: #f2f2f4;
  border-color: #f2f2f4;
  color: #56565a;
}

.c0:hover {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #dfdfe3;
  border-color: #dfdfe3;
}

.c0:active {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #d1d1d6;
  border-color: #d1d1d6;
  color: #56565a;
}

.c0:disabled {
  cursor: not-allowed;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #f9f9fc;
  border-color: #f9f9fc;
  color: #8b8b90;
}

.c0:focus {
  box-shadow: #d1d1d6 0 0 0 2px;
}

<Button
  disabled={false}
  fontColor=""
  isLoading={false}
  mode="default"
  onClick={[Function]}
  type="button"
>
  <StyledButton
    disabled={false}
    fontColor=""
    mode="default"
    onClick={[Function]}
    type="button"
  >
    <StyledComponent
      disabled={false}
      fontColor=""
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "StyledButton-sc-1etazn9-0",
            "isStatic": false,
            "lastClassName": "PJlNW",
            "rules": Array [
              "border-radius:3px;border-style:solid;border-width:1px;box-sizing:border-box;cursor:pointer;font-size:14px;line-height:18px;outline:none;padding:10px 20px;text-align:center;text-decoration:none;transition:background-color ",
              "100ms",
              " ease-out,border-color ",
              "100ms",
              " ease-out,box-shadow ",
              "100ms",
              " ease-out;width:",
              [Function],
              ";white-space:nowrap;",
              [Function],
              ";",
              [Function],
              ";:hover{cursor:pointer;text-decoration:none;",
              [Function],
              "};:active{text-decoration:none;",
              [Function],
              "};:disabled{cursor:not-allowed;text-decoration:none;",
              [Function],
              "};:focus{",
              [Function],
              "}",
            ],
          },
          "displayName": "StyledButton",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "StyledButton-sc-1etazn9-0",
          "target": "button",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      mode="default"
      onClick={[Function]}
      type="button"
    >
      <button
        className="c0"
        disabled={false}
        mode="default"
        onClick={[Function]}
        type="button"
      >
        <ContentWrapper>
          <StyledComponent
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "ContentWrapper-sc-36hfub-0",
                  "isStatic": false,
                  "lastClassName": "c1",
                  "rules": Array [
                    "align-self:center;display:inline-flex;flex-wrap:nowrap;max-width:100%;position:relative;overflow:hidden;min-width:14px;",
                  ],
                },
                "displayName": "ContentWrapper",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "ContentWrapper-sc-36hfub-0",
                "target": "span",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <span
              className="c1"
            >
              <Content
                isLoading={false}
              >
                <StyledComponent
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "Content-sc-18psqsj-0",
                        "isStatic": false,
                        "lastClassName": "c2",
                        "rules": Array [
                          "flex:1 1 auto;opacity:",
                          [Function],
                          ";overflow:hidden;text-overflow:ellipsis;white-space:nowrap;",
                        ],
                      },
                      "displayName": "Content",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "Content-sc-18psqsj-0",
                      "target": "span",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                  isLoading={false}
                >
                  <span
                    className="c2"
                  >
                    DEFAULT_BUTTON
                  </span>
                </StyledComponent>
              </Content>
            </span>
          </StyledComponent>
        </ContentWrapper>
      </button>
    </StyledComponent>
  </StyledButton>
</Button>
`;

exports[`button mode="negative" should match snapshot 1`] = `
.c2 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  opacity: 1;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c1 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  max-width: 100%;
  position: relative;
  overflow: hidden;
  min-width: 14px;
}

.c0 {
  border-radius: 3px;
  border-style: solid;
  border-width: 1px;
  box-sizing: border-box;
  cursor: pointer;
  font-size: 14px;
  line-height: 18px;
  outline: none;
  padding: 10px 20px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color 100ms ease-out,border-color 100ms ease-out,box-shadow 100ms ease-out;
  transition: background-color 100ms ease-out,border-color 100ms ease-out,box-shadow 100ms ease-out;
  white-space: nowrap;
  background-color: #ffeceb;
  border-color: #ffeceb;
  color: #ed4545;
}

.c0:hover {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #fabbb6;
  border-color: #fabbb6;
  color: #9c2d23;
}

.c0:active {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #f4857e;
  border-color: #f4857e;
  color: #4d0600;
}

.c0:disabled {
  cursor: not-allowed;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #f9f9fc;
  border-color: #f9f9fc;
  color: #8b8b90;
}

.c0:focus {
  box-shadow: #f4857e 0 0 0 2px;
}

<Button
  disabled={false}
  fontColor=""
  isLoading={false}
  mode="negative"
  onClick={[Function]}
  type="button"
>
  <StyledButton
    disabled={false}
    fontColor=""
    mode="negative"
    onClick={[Function]}
    type="button"
  >
    <StyledComponent
      disabled={false}
      fontColor=""
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "StyledButton-sc-1etazn9-0",
            "isStatic": false,
            "lastClassName": "cFFcIx",
            "rules": Array [
              "border-radius:3px;border-style:solid;border-width:1px;box-sizing:border-box;cursor:pointer;font-size:14px;line-height:18px;outline:none;padding:10px 20px;text-align:center;text-decoration:none;transition:background-color ",
              "100ms",
              " ease-out,border-color ",
              "100ms",
              " ease-out,box-shadow ",
              "100ms",
              " ease-out;width:",
              [Function],
              ";white-space:nowrap;",
              [Function],
              ";",
              [Function],
              ";:hover{cursor:pointer;text-decoration:none;",
              [Function],
              "};:active{text-decoration:none;",
              [Function],
              "};:disabled{cursor:not-allowed;text-decoration:none;",
              [Function],
              "};:focus{",
              [Function],
              "}",
            ],
          },
          "displayName": "StyledButton",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "StyledButton-sc-1etazn9-0",
          "target": "button",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      mode="negative"
      onClick={[Function]}
      type="button"
    >
      <button
        className="c0"
        disabled={false}
        mode="negative"
        onClick={[Function]}
        type="button"
      >
        <ContentWrapper>
          <StyledComponent
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "ContentWrapper-sc-36hfub-0",
                  "isStatic": false,
                  "lastClassName": "c1",
                  "rules": Array [
                    "align-self:center;display:inline-flex;flex-wrap:nowrap;max-width:100%;position:relative;overflow:hidden;min-width:14px;",
                  ],
                },
                "displayName": "ContentWrapper",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "ContentWrapper-sc-36hfub-0",
                "target": "span",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <span
              className="c1"
            >
              <Content
                isLoading={false}
              >
                <StyledComponent
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "Content-sc-18psqsj-0",
                        "isStatic": false,
                        "lastClassName": "c2",
                        "rules": Array [
                          "flex:1 1 auto;opacity:",
                          [Function],
                          ";overflow:hidden;text-overflow:ellipsis;white-space:nowrap;",
                        ],
                      },
                      "displayName": "Content",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "Content-sc-18psqsj-0",
                      "target": "span",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                  isLoading={false}
                >
                  <span
                    className="c2"
                  >
                    NEGATIVE_BUTTON
                  </span>
                </StyledComponent>
              </Content>
            </span>
          </StyledComponent>
        </ContentWrapper>
      </button>
    </StyledComponent>
  </StyledButton>
</Button>
`;

exports[`button mode="neutral" should match snapshot 1`] = `
.c2 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  opacity: 1;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c1 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  max-width: 100%;
  position: relative;
  overflow: hidden;
  min-width: 14px;
}

.c0 {
  border-radius: 3px;
  border-style: solid;
  border-width: 1px;
  box-sizing: border-box;
  cursor: pointer;
  font-size: 14px;
  line-height: 18px;
  outline: none;
  padding: 10px 20px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color 100ms ease-out,border-color 100ms ease-out,box-shadow 100ms ease-out;
  transition: background-color 100ms ease-out,border-color 100ms ease-out,box-shadow 100ms ease-out;
  white-space: nowrap;
  background-color: transparent;
  border-color: transparent;
  font-weight: 600;
  color: dark;
}

.c0:hover {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgba(255,255,255,0.2);
}

.c0:active {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgba(255,255,255,0.5);
}

.c0:disabled {
  cursor: not-allowed;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: transparent;
  border-color: transparent;
  color: dark;
}

.c0:focus {
  box-shadow: #8b8b90 0 0 0 2px;
}

<Button
  disabled={false}
  fontColor="dark"
  isLoading={false}
  mode="neutral"
  onClick={[Function]}
  type="button"
>
  <StyledButton
    disabled={false}
    fontColor="dark"
    mode="neutral"
    onClick={[Function]}
    type="button"
  >
    <StyledComponent
      disabled={false}
      fontColor="dark"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "StyledButton-sc-1etazn9-0",
            "isStatic": false,
            "lastClassName": "dIoxyR",
            "rules": Array [
              "border-radius:3px;border-style:solid;border-width:1px;box-sizing:border-box;cursor:pointer;font-size:14px;line-height:18px;outline:none;padding:10px 20px;text-align:center;text-decoration:none;transition:background-color ",
              "100ms",
              " ease-out,border-color ",
              "100ms",
              " ease-out,box-shadow ",
              "100ms",
              " ease-out;width:",
              [Function],
              ";white-space:nowrap;",
              [Function],
              ";",
              [Function],
              ";:hover{cursor:pointer;text-decoration:none;",
              [Function],
              "};:active{text-decoration:none;",
              [Function],
              "};:disabled{cursor:not-allowed;text-decoration:none;",
              [Function],
              "};:focus{",
              [Function],
              "}",
            ],
          },
          "displayName": "StyledButton",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "StyledButton-sc-1etazn9-0",
          "target": "button",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      mode="neutral"
      onClick={[Function]}
      type="button"
    >
      <button
        className="c0"
        disabled={false}
        mode="neutral"
        onClick={[Function]}
        type="button"
      >
        <ContentWrapper>
          <StyledComponent
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "ContentWrapper-sc-36hfub-0",
                  "isStatic": false,
                  "lastClassName": "c1",
                  "rules": Array [
                    "align-self:center;display:inline-flex;flex-wrap:nowrap;max-width:100%;position:relative;overflow:hidden;min-width:14px;",
                  ],
                },
                "displayName": "ContentWrapper",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "ContentWrapper-sc-36hfub-0",
                "target": "span",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <span
              className="c1"
            >
              <Content
                isLoading={false}
              >
                <StyledComponent
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "Content-sc-18psqsj-0",
                        "isStatic": false,
                        "lastClassName": "c2",
                        "rules": Array [
                          "flex:1 1 auto;opacity:",
                          [Function],
                          ";overflow:hidden;text-overflow:ellipsis;white-space:nowrap;",
                        ],
                      },
                      "displayName": "Content",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "Content-sc-18psqsj-0",
                      "target": "span",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                  isLoading={false}
                >
                  <span
                    className="c2"
                  >
                    NEUTRAL_BUTTON
                  </span>
                </StyledComponent>
              </Content>
            </span>
          </StyledComponent>
        </ContentWrapper>
      </button>
    </StyledComponent>
  </StyledButton>
</Button>
`;

exports[`button mode="neutral" should match snapshot 2`] = `
.c2 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  opacity: 1;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c1 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  max-width: 100%;
  position: relative;
  overflow: hidden;
  min-width: 14px;
}

.c0 {
  border-radius: 3px;
  border-style: solid;
  border-width: 1px;
  box-sizing: border-box;
  cursor: pointer;
  font-size: 14px;
  line-height: 18px;
  outline: none;
  padding: 10px 20px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color 100ms ease-out,border-color 100ms ease-out,box-shadow 100ms ease-out;
  transition: background-color 100ms ease-out,border-color 100ms ease-out,box-shadow 100ms ease-out;
  white-space: nowrap;
  background-color: transparent;
  border-color: transparent;
  font-weight: 600;
  color: light;
}

.c0:hover {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgba(255,255,255,0.2);
}

.c0:active {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgba(255,255,255,0.5);
}

.c0:disabled {
  cursor: not-allowed;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: transparent;
  border-color: transparent;
  color: light;
}

.c0:focus {
  box-shadow: #8b8b90 0 0 0 2px;
}

<Button
  disabled={false}
  fontColor="light"
  isLoading={false}
  mode="neutral"
  onClick={[Function]}
  type="button"
>
  <StyledButton
    disabled={false}
    fontColor="light"
    mode="neutral"
    onClick={[Function]}
    type="button"
  >
    <StyledComponent
      disabled={false}
      fontColor="light"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "StyledButton-sc-1etazn9-0",
            "isStatic": false,
            "lastClassName": "dIoxyR",
            "rules": Array [
              "border-radius:3px;border-style:solid;border-width:1px;box-sizing:border-box;cursor:pointer;font-size:14px;line-height:18px;outline:none;padding:10px 20px;text-align:center;text-decoration:none;transition:background-color ",
              "100ms",
              " ease-out,border-color ",
              "100ms",
              " ease-out,box-shadow ",
              "100ms",
              " ease-out;width:",
              [Function],
              ";white-space:nowrap;",
              [Function],
              ";",
              [Function],
              ";:hover{cursor:pointer;text-decoration:none;",
              [Function],
              "};:active{text-decoration:none;",
              [Function],
              "};:disabled{cursor:not-allowed;text-decoration:none;",
              [Function],
              "};:focus{",
              [Function],
              "}",
            ],
          },
          "displayName": "StyledButton",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "StyledButton-sc-1etazn9-0",
          "target": "button",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      mode="neutral"
      onClick={[Function]}
      type="button"
    >
      <button
        className="c0"
        disabled={false}
        mode="neutral"
        onClick={[Function]}
        type="button"
      >
        <ContentWrapper>
          <StyledComponent
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "ContentWrapper-sc-36hfub-0",
                  "isStatic": false,
                  "lastClassName": "c1",
                  "rules": Array [
                    "align-self:center;display:inline-flex;flex-wrap:nowrap;max-width:100%;position:relative;overflow:hidden;min-width:14px;",
                  ],
                },
                "displayName": "ContentWrapper",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "ContentWrapper-sc-36hfub-0",
                "target": "span",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <span
              className="c1"
            >
              <Content
                isLoading={false}
              >
                <StyledComponent
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "Content-sc-18psqsj-0",
                        "isStatic": false,
                        "lastClassName": "c2",
                        "rules": Array [
                          "flex:1 1 auto;opacity:",
                          [Function],
                          ";overflow:hidden;text-overflow:ellipsis;white-space:nowrap;",
                        ],
                      },
                      "displayName": "Content",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "Content-sc-18psqsj-0",
                      "target": "span",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                  isLoading={false}
                >
                  <span
                    className="c2"
                  >
                    NEUTRAL_BUTTON
                  </span>
                </StyledComponent>
              </Content>
            </span>
          </StyledComponent>
        </ContentWrapper>
      </button>
    </StyledComponent>
  </StyledButton>
</Button>
`;

exports[`button mode="positive" should match snapshot 1`] = `
.c2 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  opacity: 1;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c1 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  max-width: 100%;
  position: relative;
  overflow: hidden;
  min-width: 14px;
}

.c0 {
  border-radius: 3px;
  border-style: solid;
  border-width: 1px;
  box-sizing: border-box;
  cursor: pointer;
  font-size: 14px;
  line-height: 18px;
  outline: none;
  padding: 10px 20px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color 100ms ease-out,border-color 100ms ease-out,box-shadow 100ms ease-out;
  transition: background-color 100ms ease-out,border-color 100ms ease-out,box-shadow 100ms ease-out;
  white-space: nowrap;
  background-color: #d3f0e6;
  border-color: #d3f0e6;
  color: #0aaf77;
}

.c0:hover {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #ace5d1;
  border-color: #ace5d1;
  color: #089c6a;
}

.c0:active {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #7cd6b6;
  border-color: #7cd6b6;
  color: #047750;
}

.c0:disabled {
  cursor: not-allowed;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #f9f9fc;
  border-color: #f9f9fc;
  color: #8b8b90;
}

.c0:focus {
  box-shadow: #7cd6b6 0 0 0 2px;
}

<Button
  disabled={false}
  fontColor=""
  isLoading={false}
  mode="positive"
  onClick={[Function]}
  type="button"
>
  <StyledButton
    disabled={false}
    fontColor=""
    mode="positive"
    onClick={[Function]}
    type="button"
  >
    <StyledComponent
      disabled={false}
      fontColor=""
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "StyledButton-sc-1etazn9-0",
            "isStatic": false,
            "lastClassName": "bUYvKp",
            "rules": Array [
              "border-radius:3px;border-style:solid;border-width:1px;box-sizing:border-box;cursor:pointer;font-size:14px;line-height:18px;outline:none;padding:10px 20px;text-align:center;text-decoration:none;transition:background-color ",
              "100ms",
              " ease-out,border-color ",
              "100ms",
              " ease-out,box-shadow ",
              "100ms",
              " ease-out;width:",
              [Function],
              ";white-space:nowrap;",
              [Function],
              ";",
              [Function],
              ";:hover{cursor:pointer;text-decoration:none;",
              [Function],
              "};:active{text-decoration:none;",
              [Function],
              "};:disabled{cursor:not-allowed;text-decoration:none;",
              [Function],
              "};:focus{",
              [Function],
              "}",
            ],
          },
          "displayName": "StyledButton",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "StyledButton-sc-1etazn9-0",
          "target": "button",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      mode="positive"
      onClick={[Function]}
      type="button"
    >
      <button
        className="c0"
        disabled={false}
        mode="positive"
        onClick={[Function]}
        type="button"
      >
        <ContentWrapper>
          <StyledComponent
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "ContentWrapper-sc-36hfub-0",
                  "isStatic": false,
                  "lastClassName": "c1",
                  "rules": Array [
                    "align-self:center;display:inline-flex;flex-wrap:nowrap;max-width:100%;position:relative;overflow:hidden;min-width:14px;",
                  ],
                },
                "displayName": "ContentWrapper",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "ContentWrapper-sc-36hfub-0",
                "target": "span",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <span
              className="c1"
            >
              <Content
                isLoading={false}
              >
                <StyledComponent
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "Content-sc-18psqsj-0",
                        "isStatic": false,
                        "lastClassName": "c2",
                        "rules": Array [
                          "flex:1 1 auto;opacity:",
                          [Function],
                          ";overflow:hidden;text-overflow:ellipsis;white-space:nowrap;",
                        ],
                      },
                      "displayName": "Content",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "Content-sc-18psqsj-0",
                      "target": "span",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                  isLoading={false}
                >
                  <span
                    className="c2"
                  >
                    POSITIVE_BUTTON
                  </span>
                </StyledComponent>
              </Content>
            </span>
          </StyledComponent>
        </ContentWrapper>
      </button>
    </StyledComponent>
  </StyledButton>
</Button>
`;

exports[`button mode="primary" should match snapshot 1`] = `
.c2 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  opacity: 1;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c1 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  max-width: 100%;
  position: relative;
  overflow: hidden;
  min-width: 14px;
}

.c0 {
  border-radius: 3px;
  border-style: solid;
  border-width: 1px;
  box-sizing: border-box;
  cursor: pointer;
  font-size: 14px;
  line-height: 18px;
  outline: none;
  padding: 10px 20px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color 100ms ease-out,border-color 100ms ease-out,box-shadow 100ms ease-out;
  transition: background-color 100ms ease-out,border-color 100ms ease-out,box-shadow 100ms ease-out;
  white-space: nowrap;
  background-color: #7654ff;
  border-color: #7654ff;
  color: white;
}

.c0:hover {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #4f3fa7;
  border-color: #4f3fa7;
}

.c0:active {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #261e52;
  border-color: #261e52;
}

.c0:disabled {
  cursor: not-allowed;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #f9f9fc;
  border-color: #f9f9fc;
  color: #8b8b90;
}

.c0:focus {
  box-shadow: #261e52 0 0 0 2px;
}

<Button
  disabled={false}
  fontColor=""
  isLoading={false}
  mode="primary"
  onClick={[Function]}
  type="button"
>
  <StyledButton
    disabled={false}
    fontColor=""
    mode="primary"
    onClick={[Function]}
    type="button"
  >
    <StyledComponent
      disabled={false}
      fontColor=""
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "StyledButton-sc-1etazn9-0",
            "isStatic": false,
            "lastClassName": "eRLMtY",
            "rules": Array [
              "border-radius:3px;border-style:solid;border-width:1px;box-sizing:border-box;cursor:pointer;font-size:14px;line-height:18px;outline:none;padding:10px 20px;text-align:center;text-decoration:none;transition:background-color ",
              "100ms",
              " ease-out,border-color ",
              "100ms",
              " ease-out,box-shadow ",
              "100ms",
              " ease-out;width:",
              [Function],
              ";white-space:nowrap;",
              [Function],
              ";",
              [Function],
              ";:hover{cursor:pointer;text-decoration:none;",
              [Function],
              "};:active{text-decoration:none;",
              [Function],
              "};:disabled{cursor:not-allowed;text-decoration:none;",
              [Function],
              "};:focus{",
              [Function],
              "}",
            ],
          },
          "displayName": "StyledButton",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "StyledButton-sc-1etazn9-0",
          "target": "button",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      mode="primary"
      onClick={[Function]}
      type="button"
    >
      <button
        className="c0"
        disabled={false}
        mode="primary"
        onClick={[Function]}
        type="button"
      >
        <ContentWrapper>
          <StyledComponent
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "ContentWrapper-sc-36hfub-0",
                  "isStatic": false,
                  "lastClassName": "c1",
                  "rules": Array [
                    "align-self:center;display:inline-flex;flex-wrap:nowrap;max-width:100%;position:relative;overflow:hidden;min-width:14px;",
                  ],
                },
                "displayName": "ContentWrapper",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "ContentWrapper-sc-36hfub-0",
                "target": "span",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <span
              className="c1"
            >
              <Content
                isLoading={false}
              >
                <StyledComponent
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "Content-sc-18psqsj-0",
                        "isStatic": false,
                        "lastClassName": "iDvfiU",
                        "rules": Array [
                          "flex:1 1 auto;opacity:",
                          [Function],
                          ";overflow:hidden;text-overflow:ellipsis;white-space:nowrap;",
                        ],
                      },
                      "displayName": "Content",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "Content-sc-18psqsj-0",
                      "target": "span",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                  isLoading={false}
                >
                  <span
                    className="c2"
                  >
                    PRIMARY_BUTTON
                  </span>
                </StyledComponent>
              </Content>
            </span>
          </StyledComponent>
        </ContentWrapper>
      </button>
    </StyledComponent>
  </StyledButton>
</Button>
`;

exports[`button mode="secondary" should match snapshot 1`] = `
.c2 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  opacity: 1;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c1 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  max-width: 100%;
  position: relative;
  overflow: hidden;
  min-width: 14px;
}

.c0 {
  border-radius: 3px;
  border-style: solid;
  border-width: 1px;
  box-sizing: border-box;
  cursor: pointer;
  font-size: 14px;
  line-height: 18px;
  outline: none;
  padding: 10px 20px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color 100ms ease-out,border-color 100ms ease-out,box-shadow 100ms ease-out;
  transition: background-color 100ms ease-out,border-color 100ms ease-out,box-shadow 100ms ease-out;
  white-space: nowrap;
  background-color: #cac0ff;
  border-color: #cac0ff;
  color: #4f3fa7;
}

.c0:hover {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #a291ff;
  border-color: #a291ff;
}

.c0:active {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #7654ff;
  border-color: #7654ff;
  color: white;
}

.c0:disabled {
  cursor: not-allowed;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #f9f9fc;
  border-color: #f9f9fc;
  color: #8b8b90;
}

.c0:focus {
  box-shadow: #7654ff 0 0 0 2px;
}

<Button
  disabled={false}
  fontColor=""
  isLoading={false}
  mode="secondary"
  onClick={[Function]}
  type="button"
>
  <StyledButton
    disabled={false}
    fontColor=""
    mode="secondary"
    onClick={[Function]}
    type="button"
  >
    <StyledComponent
      disabled={false}
      fontColor=""
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "StyledButton-sc-1etazn9-0",
            "isStatic": false,
            "lastClassName": "BzcMk",
            "rules": Array [
              "border-radius:3px;border-style:solid;border-width:1px;box-sizing:border-box;cursor:pointer;font-size:14px;line-height:18px;outline:none;padding:10px 20px;text-align:center;text-decoration:none;transition:background-color ",
              "100ms",
              " ease-out,border-color ",
              "100ms",
              " ease-out,box-shadow ",
              "100ms",
              " ease-out;width:",
              [Function],
              ";white-space:nowrap;",
              [Function],
              ";",
              [Function],
              ";:hover{cursor:pointer;text-decoration:none;",
              [Function],
              "};:active{text-decoration:none;",
              [Function],
              "};:disabled{cursor:not-allowed;text-decoration:none;",
              [Function],
              "};:focus{",
              [Function],
              "}",
            ],
          },
          "displayName": "StyledButton",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "StyledButton-sc-1etazn9-0",
          "target": "button",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      mode="secondary"
      onClick={[Function]}
      type="button"
    >
      <button
        className="c0"
        disabled={false}
        mode="secondary"
        onClick={[Function]}
        type="button"
      >
        <ContentWrapper>
          <StyledComponent
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "ContentWrapper-sc-36hfub-0",
                  "isStatic": false,
                  "lastClassName": "c1",
                  "rules": Array [
                    "align-self:center;display:inline-flex;flex-wrap:nowrap;max-width:100%;position:relative;overflow:hidden;min-width:14px;",
                  ],
                },
                "displayName": "ContentWrapper",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "ContentWrapper-sc-36hfub-0",
                "target": "span",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <span
              className="c1"
            >
              <Content
                isLoading={false}
              >
                <StyledComponent
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "Content-sc-18psqsj-0",
                        "isStatic": false,
                        "lastClassName": "c2",
                        "rules": Array [
                          "flex:1 1 auto;opacity:",
                          [Function],
                          ";overflow:hidden;text-overflow:ellipsis;white-space:nowrap;",
                        ],
                      },
                      "displayName": "Content",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "Content-sc-18psqsj-0",
                      "target": "span",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                  isLoading={false}
                >
                  <span
                    className="c2"
                  >
                    SECONDARY_BUTTON
                  </span>
                </StyledComponent>
              </Content>
            </span>
          </StyledComponent>
        </ContentWrapper>
      </button>
    </StyledComponent>
  </StyledButton>
</Button>
`;

exports[`button mode="subtle" should match snapshot 1`] = `
.c2 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  opacity: 1;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c1 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  max-width: 100%;
  position: relative;
  overflow: hidden;
  min-width: 14px;
}

.c0 {
  border-radius: 3px;
  border-style: solid;
  border-width: 1px;
  box-sizing: border-box;
  cursor: pointer;
  font-size: 14px;
  line-height: 18px;
  outline: none;
  padding: 10px 20px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color 100ms ease-out,border-color 100ms ease-out,box-shadow 100ms ease-out;
  transition: background-color 100ms ease-out,border-color 100ms ease-out,box-shadow 100ms ease-out;
  white-space: nowrap;
  background-color: transparent;
  border-color: transparent;
  color: #7654ff;
}

.c0:hover {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgba(0,0,0,0.1);
}

.c0:active {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgba(0,0,0,0.15);
}

.c0:disabled {
  cursor: not-allowed;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: transparent;
  border-color: transparent;
  color: #8b8b90;
}

.c0:focus {
  box-shadow: rgba(0,0,0,0.15) 0 0 0 2px;
}

<Button
  disabled={false}
  fontColor=""
  isLoading={false}
  mode="subtle"
  onClick={[Function]}
  type="button"
>
  <StyledButton
    disabled={false}
    fontColor=""
    mode="subtle"
    onClick={[Function]}
    type="button"
  >
    <StyledComponent
      disabled={false}
      fontColor=""
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "StyledButton-sc-1etazn9-0",
            "isStatic": false,
            "lastClassName": "izsLXU",
            "rules": Array [
              "border-radius:3px;border-style:solid;border-width:1px;box-sizing:border-box;cursor:pointer;font-size:14px;line-height:18px;outline:none;padding:10px 20px;text-align:center;text-decoration:none;transition:background-color ",
              "100ms",
              " ease-out,border-color ",
              "100ms",
              " ease-out,box-shadow ",
              "100ms",
              " ease-out;width:",
              [Function],
              ";white-space:nowrap;",
              [Function],
              ";",
              [Function],
              ";:hover{cursor:pointer;text-decoration:none;",
              [Function],
              "};:active{text-decoration:none;",
              [Function],
              "};:disabled{cursor:not-allowed;text-decoration:none;",
              [Function],
              "};:focus{",
              [Function],
              "}",
            ],
          },
          "displayName": "StyledButton",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "StyledButton-sc-1etazn9-0",
          "target": "button",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      mode="subtle"
      onClick={[Function]}
      type="button"
    >
      <button
        className="c0"
        disabled={false}
        mode="subtle"
        onClick={[Function]}
        type="button"
      >
        <ContentWrapper>
          <StyledComponent
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "ContentWrapper-sc-36hfub-0",
                  "isStatic": false,
                  "lastClassName": "c1",
                  "rules": Array [
                    "align-self:center;display:inline-flex;flex-wrap:nowrap;max-width:100%;position:relative;overflow:hidden;min-width:14px;",
                  ],
                },
                "displayName": "ContentWrapper",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "ContentWrapper-sc-36hfub-0",
                "target": "span",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <span
              className="c1"
            >
              <Content
                isLoading={false}
              >
                <StyledComponent
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "Content-sc-18psqsj-0",
                        "isStatic": false,
                        "lastClassName": "c2",
                        "rules": Array [
                          "flex:1 1 auto;opacity:",
                          [Function],
                          ";overflow:hidden;text-overflow:ellipsis;white-space:nowrap;",
                        ],
                      },
                      "displayName": "Content",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "Content-sc-18psqsj-0",
                      "target": "span",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                  isLoading={false}
                >
                  <span
                    className="c2"
                  >
                    SUBTLE_BUTTON
                  </span>
                </StyledComponent>
              </Content>
            </span>
          </StyledComponent>
        </ContentWrapper>
      </button>
    </StyledComponent>
  </StyledButton>
</Button>
`;
